--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,5 @@ archives_base_name=Discord-MC-Chat
 minecraft_version=1.20.1
 loader_version=0.16.14
 fabric_version=0.92.6+1.20.1
+mcVersion=12001
+minecraft_dependency=1.20,1.20.1
