--- a/settings.gradle
+++ b/settings.gradle
@@ -11,27 +11,6 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
-    resolutionStrategy {
-        eachPlugin {
-            switch (requested.id.id) {
-                case "com.replaymod.preprocess": {
-                    useModule("com.github.Fallen-Breath:preprocessor:${requested.version}")
-                    break
-                }
-            }
-        }
-    }
 }
 
-def versions = Arrays.asList(
-        "1.20.1"
-)
-for (String version : versions) {
-    include(":$version")
-
-    def proj = project(":$version")
-    proj.projectDir = file("versions/$version")
-    proj.buildFileName = "../../common.gradle"
-}
-
-include(":wrapper")
+rootProject.name = "Discord-MC-Chat"
